--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "bcrypt": "^3.0.5",
     "express": "^4.16.4",
+    "express-session": "^1.15.6",
     "helmet": "^3.16.0",
     "knex": "^0.16.3",
     "nodemon": "^1.18.10",
