--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/UnknownMonk/webauth-i-challenge#readme",
   "dependencies": {
     "bcrypt": "^3.0.5",
+    "connect-session-knex": "^1.4.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "helmet": "^3.16.0",
